<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intermidiate">

    <EditText
        android:id="@+id/maximumdata"
        android:layout_width="309dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/maximumdata"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datapoints"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/datapoints"
        android:layout_width="309dp"
        android:layout_height="55dp"
        android:text="@string/data_points"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <TextView
        android:id="@+id/rateofx"
        android:layout_width="309dp"
        android:layout_height="55dp"
        android:layout_marginBottom="376dp"
        android:text="@string/rate_of_x"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maximumdata"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/creategraph"
        android:layout_width="125dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <Button
        android:id="@+id/showing"
        android:layout_width="125dp"
        android:layout_height="58dp"
        android:text="Show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <EditText
        android:id="@+id/valueofrate"
        android:layout_width="309dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/between_0_05_0_15"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateofx" />

</androidx.constraintlayout.widget.ConstraintLayout>